# outherspace

./: .gitignore  .gitmodules  4d.vert  CMakeLists.txt  Makefile  Makefile.raw  Makefile.ways  affine.c  affine.h  bbox.c  bbox.h  bitstring.c  bitstring.h  cli.c  color.h  compute.c  compute.h  deps.mk  dynamic-setup.c  dynamic-setup.h  file2array.c  gmrand.h  gui-indep.c  gui-indep.h  gui-opencl.c  gui-opengl.c  gui.c  hello.c  hello.cl  imgdiff.c  kdtree.c  kdtree.h  kptree.c  kptree.h  lightcut.c  lightcut.h  main.c  main.h  material.c  material.h  (+42 more)
cx/: fileb.c
input/: track1.mtl
src/: CMakeLists.txt  affine.c  affine.h  bbox.c  cli.c  compute.c  diffuse.frag  diffuse.vert  dynamic-setup.c  dynamic-setup.h  file2array.c  gui-indep.c  gui-indep.h  gui-opencl.c  gui-opengl.c  gui.c  hello.c  hello.cl  imgdiff.c  kdtree.c  kptree.c  lightcut.c  lightcut.h  material.c  material.h  motion.c  pack.c  pack.h  phong.vert  pnm-image.c  raytrace-pack.c  raytrace.c  raytrace.h  scene.c  serial.h  simplex.c  slist.c  slist.h  testcase.c  testcase.h  (+6 more)
src/verif/: main.c  order.c  testlist.txt
verif/: main.c  order.c  pack.c  testlist.h
